--- a/MX Site/index.html
+++ b/MX Site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="overflow-x: hidden; margin-right: -10px;">
 <head>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -33,7 +33,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <img src="img/iguslogo.png" />
       <h1>Listo para descubrir el poder del plástico?</h1>
       <h2>Tenemos todo preparado para recorrer el país y mostrar los beneficios de los rodamientos de polímero igus®, cables flexibles, cadenas porta cable y mucho más. ¿Interesado en ver lo que ofrecemos de primera mano? <span class="req-show">¡Solicite una vista para que lleguemos hasta usted!</span></h2>
-      <a class="req-stop-mobile">Request a stop at your company</a>
+      <a class="req-stop-mobile">Solicita una visita</a>
       <form action="https://forms.hubspot.com/uploads/form/v2/2366840/729fb272-72f8-492a-8fc4-59e9e68675ff" method="post">
         <input type="text" placeholder="Nombre" name="firstname" class="two-column" />
         <input type="text" placeholder="Apellido" name="lastname" class="two-column" />
@@ -49,13 +49,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <input type="text" placeholder="Ciudad" name="city" class="two-column" />
         <input type="text" placeholder="Estado" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Por favor eniarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
+        <input type="checkbox" class="opt-in form1" value="true" name="RelevantInfo"> <span class="opt-in form1 form-text">Por favor enviarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
         <br class="opt-in-br form1-br" />
         <input type="submit" class="submit" value="Enviar">
       </form>
     </div>
     <div class="top-right-content">
-      <img src="img/mx_van.png" />
+      <img src="img/mx_van_noshadow.png" />
     </div>
     <div class="middle-left-content">
       <script src="https://fast.wistia.com/embed/medias/1pxfzkri9d.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_1pxfzkri9d videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/1pxfzkri9d/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
@@ -64,8 +64,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <div class="middle-right-content">
       <h3>¿Qué es un Traveling Trade Show de igus<span style="font-size: 25px"><sup><sup>®</sup></sup></span>?</h3>
-      <p>The traveling tradeshow brings the tradeshow experience to your company and is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
-      <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
+      <p>Las ferias móviles (Traveling Trade Shows) le brindan la experiencia de ferias comerciales directamente en su empresa y están completamente personalizadas según sus necesidades. Se puede instalar al aire libre o en el interior, ambas opciones son buenas para el evento.</p>
+      <p>Se muestran nuevos productos y componentes relevantes para su empresa, con múltiples vendedores disponibles para conversaciones individuales. Es ideal para grupos pequeños y grandes por igual, los visitantes pueden participar durante el tiempo que requieran. También proporcionamos bebidas, bocadillos y muestras gratuitas de productos para hacer de esto una gran experiencia para su empresa.</p>
     </div>
     <div class="map">
       <h3>¡Estaremos cerca de tu ciudad!</h3>
@@ -91,49 +91,49 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <tr>
             <td>10/22 - 10/26: San Luis Potosi</td>
             <td></td>
-            <td class="cta">Request a stop</td>
+            <td class="cta">Solicita una visita</td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="van">
-      <img src="img/van.png" />
+      <img src="img/mx_van_with_parts.png" />
     </div>
     <div class="tile-intro">
       <h3>Te preguntas qué traeremos en la feria?</h3>
       <p>¿Nuestro negocio se centra en cuatro lineas principales de productos: sistemas de cadenas portacables e-chain<span style="font-size: 10px"><sup>®</sup></span>, cables super flexibles chainflex<span style="font-size: 10px"><sup>®</sup></span>, rodamientos de polímero auto-lubricante iglide<span style="font-size: 10px"><sup>®</sup></span> y tecnología lineal drylin<span style="font-size: 10px"><sup>®</sup></span>.  También ofrecemos componentes para robótica, servicios de impresión 3D, materiales de barras sólidas para maquinar y más.  Estos productos se prueban ampliamente en nuestras oficinas centrales en Alemania en el laboratorio de pruebas más grande de la indusria. Más de 200,00 usuarios finales de todo el mundo están cosechando los beneficos de las soluciones igus<span style="font-size: 10px"><sup>®</sup></span>. Compruébalo por ti mismo en nuestros Traveling Trade Shows!</p>
     </div>
     <div class="tiles">
-      <a href="https://www.igus.com/energychains">
+      <a href="https://www.igus.com.mx/energychains">
         <div class="e-chain tile float-left">
         <center><img src="img/echain_tile.png" /></center>
         <h4>Cadenas portacables</h4>
         <p>Cadenas portacables e-chain<span style="font-size: 10px"><sup>®</sup></span> protege cables y mangueras a la vez que minimiza el tiempo de inactividad y prolonga la vida útil. </p>
-        <p class="cta">Learn more</p>
+        <p class="cta">Aprende más</p>
       </div>
     </a>
-    <a href="https://www.igus.com/wpck/18351/chainflex">
+    <a href="https://www.igus.com.mx/info/unharnessed-cables-chainflex-cables">
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
         <p>Cables duraderos confiables y están diseñados para aplicaciones en movimiento y disponible sin longitudes minimas.</p>
-        <p class="cta">Learn more</p>
+        <p class="cta">Aprende más</p>
       </div>
       </a>
-      <a href="https://www.igus.com/wpck/20603/linearsystem">
+      <a href="https://www.igus.com.mx/drylin/profile-rail-guide">
       <div class="drylin tile float-left">
         <center><img src="img/drylin_tile.png" /></center>
         <h4>Guías lineales drylin</h4>
         <p>drylin<span style="font-size: 10px"><sup>®</sup></span> rodamientos lineales, son auto lubricantes resistentes a la corrosión y a prueba de golpes, entre otras ventajas.</p>
-        <p class="cta">Learn more</p>
+        <p class="cta">Aprende más</p>
       </div>
       </a>
-      <a href="https://www.igus.com/wpck/18358/Gleitlager">
+      <a href="https://www.igus.com.mx/info/plain-bearings-plain-bearings-iglidur">
       <div class="iglide tile float-left">
         <center><img src="img/iglide_tile.png" /></center>
         <h4>Rodamientos de polímero</h4>
         <p>Los rodamientos de polímero iglide son, auto lubricantes, y completamente libres de manteniento.</p>
-        <p class="cta">Learn more</p>
+        <p class="cta">Aprende más</p>
       </div>
       </a>
     </div>
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <input type="text" placeholder="Ciudad o Municipio" name="city" class="two-column" />
         <input type="text" placeholder="Estado" name="state" class="two-column" />
         <br />
-        <input type="checkbox" class="opt-in form2" value="true" name="RelevantInfo"> <span class="opt-in form2 form-text">Por favor eniarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
+        <input type="checkbox" class="opt-in form2" value="true" name="RelevantInfo"> <span class="opt-in form2 form-text">Por favor enviarme información relevante de igus<span style="font-size: 8px"><sup>®</sup></span> en el futuro</span>
         <br class="opt-in-br form2-br" />
         <input type="submit" class="submit" value="Enviar">
       </form>
